--- a/index.html
+++ b/index.html
@@ -539,7 +539,7 @@
                         Thêm vào Danh bạ
                      </a>
                   </div>
-                  <div class="col-12 my-2">
+                  <!-- <div class="col-12 my-2">
                      <a target="_blank" rel="ugc nofollow" href="https://goo.gl/maps/dNXnXEFg9yiFf9JZ8"
                         class="btn btn-block btn-primary link-btn link-btn-rounded animate__animated animate__repeat-1 animate__false animate__delay-2s"
                         style="background: #fff;color: #000">
@@ -557,7 +557,7 @@
                         <!-- <i class="fas fa-map-marked-alt mr-1"></i> -->
                         Tân Hà, Lâm Hà, Lâm Đồng
                      </a>
-                  </div>
+                  </div> -->
                   <div class="col-12 my-2">
                      <a rel="ugc nofollow" href="tel:0392557927"
                         class="btn btn-block btn-primary link-btn link-btn-rounded animate__animated animate__repeat-1 animate__false animate__delay-2s"
