--- a/index.html
+++ b/index.html
@@ -513,7 +513,7 @@
       <div class="row d-flex justify-content-center text-center">
          <div class="col-md-8 link-content ">
             <header class="d-flex flex-column align-items-center" style="color: #000000">
-               <img id="image" src="./index_files/img.JPEG" alt="Hình đại diện" class="link-image">
+               <img id="image" src="./index_files/img.jpeg" alt="Hình đại diện" class="link-image">
                <div class="d-flex flex-row align-items-center mt-4">
                   <h1 id="title"><b>CẤN HOÀNG ANH QUÂN</b></h1>
                </div>
