--- a/index.html
+++ b/index.html
@@ -525,10 +525,6 @@
                      <a rel="ugc nofollow" href="./index_files/vcard.vcf"
                         class="btn btn-block btn-primary link-btn link-btn-rounded animate__animated animate__repeat-1 animate__false animate__delay-2s"
                         style="background: #fff;color: #000">
-                        <div class="link-btn-image-wrapper link-btn-rounded" style="display: none;">
-                           <img src="data:image/png;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs=" data-src=""
-                              class="link-btn-image bc_lazyload lazyload">
-                        </div>
                         <svg class="svg-inline--fa fa-address-book fa-w-14 mr-1" aria-hidden="true" focusable="false"
                            data-prefix="fas" data-icon="address-book" role="img" xmlns="http://www.w3.org/2000/svg"
                            viewBox="0 0 448 512" data-fa-i2svg="">
@@ -543,10 +539,6 @@
                      <a target="_blank" rel="ugc nofollow" href="https://goo.gl/maps/dNXnXEFg9yiFf9JZ8"
                         class="btn btn-block btn-primary link-btn link-btn-rounded animate__animated animate__repeat-1 animate__false animate__delay-2s"
                         style="background: #fff;color: #000">
-                        <div class="link-btn-image-wrapper link-btn-rounded" style="display: none;">
-                           <img src="data:image/png;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs=" data-src=""
-                              class="link-btn-image bc_lazyload lazyload">
-                        </div>
                         <svg class="svg-inline--fa fa-map-marked-alt fa-w-18 mr-1" aria-hidden="true" focusable="false"
                            data-prefix="fas" data-icon="map-marked-alt" role="img" xmlns="http://www.w3.org/2000/svg"
                            viewBox="0 0 576 512" data-fa-i2svg="">
@@ -562,10 +554,6 @@
                      <a rel="ugc nofollow" href="tel:0392557927"
                         class="btn btn-block btn-primary link-btn link-btn-rounded animate__animated animate__repeat-1 animate__false animate__delay-2s"
                         style="background: #fff;color: #000">
-                        <div class="link-btn-image-wrapper link-btn-rounded" style="display: none;">
-                           <img src="data:image/png;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs=" data-src=""
-                              class="link-btn-image bc_lazyload lazyload">
-                        </div>
                         <svg class="svg-inline--fa fa-phone-alt fa-w-16 mr-1" aria-hidden="true" focusable="false"
                            data-prefix="fas" data-icon="phone-alt" role="img" xmlns="http://www.w3.org/2000/svg"
                            viewBox="0 0 512 512" data-fa-i2svg="">
@@ -577,13 +565,9 @@
                      </a>
                   </div>
                   <div class="col-12 my-2">
-                     <a rel="ugc nofollow" href="mailto:kwannnzz7129@gmail.com"
+                     <a rel="ugc nofollow" href="mailto:quancan.7904@gmail.com"
                         class="btn btn-block btn-primary link-btn link-btn-rounded animate__animated animate__repeat-1 animate__false animate__delay-2s"
                         style="background: #fff;color: #000">
-                        <div class="link-btn-image-wrapper link-btn-rounded" style="display: none;">
-                           <img src="data:image/png;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs=" data-src=""
-                              class="link-btn-image bc_lazyload lazyload">
-                        </div>
                         <svg class="svg-inline--fa fa-envelope fa-w-16 mr-1" aria-hidden="true" focusable="false"
                            data-prefix="fas" data-icon="envelope" role="img" xmlns="http://www.w3.org/2000/svg"
                            viewBox="0 0 512 512" data-fa-i2svg="">
@@ -591,17 +575,13 @@
                               d="M502.3 190.8c3.9-3.1 9.7-.2 9.7 4.7V400c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V195.6c0-5 5.7-7.8 9.7-4.7 22.4 17.4 52.1 39.5 154.1 113.6 21.1 15.4 56.7 47.8 92.2 47.6 35.7.3 72-32.8 92.3-47.6 102-74.1 131.6-96.3 154-113.7zM256 320c23.2.4 56.6-29.2 73.4-41.4 132.7-96.3 142.8-104.7 173.4-128.7 5.8-4.5 9.2-11.5 9.2-18.9v-19c0-26.5-21.5-48-48-48H48C21.5 64 0 85.5 0 112v19c0 7.4 3.4 14.3 9.2 18.9 30.6 23.9 40.7 32.4 173.4 128.7 16.8 12.2 50.2 41.8 73.4 41.4z">
                            </path>
                         </svg>
-                        kwannnzz7129@gmail.com
+                        quancan.7904@gmail.com
                      </a>
                   </div>
                   <div class="col-12 my-2">
                      <a target="_blank" rel="ugc nofollow" href="https://www.facebook.com/kwannnzz/"
                         class="btn btn-block btn-primary link-btn link-btn-rounded animate__animated animate__repeat-1 animate__false animate__delay-2s"
                         style="background: #fff;color: #000">
-                        <div class="link-btn-image-wrapper link-btn-rounded" style="display: none;">
-                           <img src="data:image/png;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs=" data-src=""
-                              class="link-btn-image bc_lazyload lazyload">
-                        </div>
                         <svg class="svg-inline--fa fa-facebook-f fa-w-10 mr-1" aria-hidden="true" focusable="false"
                            data-prefix="fab" data-icon="facebook-f" role="img" xmlns="http://www.w3.org/2000/svg"
                            viewBox="0 0 320 512" data-fa-i2svg="">
@@ -617,10 +597,6 @@
                      <a target="_blank" rel="ugc nofollow" href="https://www.instagram.com/kwannnzz/"
                         class="btn btn-block btn-primary link-btn link-btn-rounded animate__animated animate__repeat-1 animate__false animate__delay-2s"
                         style="background: #fff;color: #000">
-                        <div class="link-btn-image-wrapper link-btn-rounded" style="display: none;">
-                           <img src="data:image/png;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs=" data-src=""
-                              class="link-btn-image bc_lazyload lazyload">
-                        </div>
                         <svg class="svg-inline--fa fa-instagram fa-w-14 mr-1" aria-hidden="true" focusable="false"
                            data-prefix="fab" data-icon="instagram" role="img" xmlns="http://www.w3.org/2000/svg"
                            viewBox="0 0 448 512" data-fa-i2svg="">
@@ -632,15 +608,11 @@
                         @kwannnzz
                      </a>
                   </div>
-                  <div class="col-12 my-2">
+                  <!-- <div class="col-12 my-2">
                      <a target="_blank" rel="ugc nofollow"
                         href="https://www.youtube.com/channel/UChhwNFDmLYjClDWu-PJLJLA"
                         class="btn btn-block btn-primary link-btn link-btn-rounded animate__animated animate__repeat-1 animate__false animate__delay-2s"
                         style="background: #fff;color: #000">
-                        <div class="link-btn-image-wrapper link-btn-rounded" style="display: none;">
-                           <img src="data:image/png;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs=" data-src=""
-                              class="link-btn-image bc_lazyload lazyload">
-                        </div>
                         <svg class="svg-inline--fa fa-youtube fa-w-18 mr-1" aria-hidden="true" focusable="false"
                            data-prefix="fab" data-icon="youtube" role="img" xmlns="http://www.w3.org/2000/svg"
                            viewBox="0 0 576 512" data-fa-i2svg="">
@@ -648,10 +620,10 @@
                               d="M549.655 124.083c-6.281-23.65-24.787-42.276-48.284-48.597C458.781 64 288 64 288 64S117.22 64 74.629 75.486c-23.497 6.322-42.003 24.947-48.284 48.597-11.412 42.867-11.412 132.305-11.412 132.305s0 89.438 11.412 132.305c6.281 23.65 24.787 41.5 48.284 47.821C117.22 448 288 448 288 448s170.78 0 213.371-11.486c23.497-6.321 42.003-24.171 48.284-47.821 11.412-42.867 11.412-132.305 11.412-132.305s0-89.438-11.412-132.305zm-317.51 213.508V175.185l142.739 81.205-142.739 81.201z">
                            </path>
                         </svg>
-                        <!-- <i class="fab fa-youtube mr-1"></i> -->
+                        <i class="fab fa-youtube mr-1"></i>
                         kwannnzz
                      </a>
-                  </div>
+                  </div> -->
                </div>
                <div id="socials" class="d-flex flex-wrap justify-content-center mt-5">
                </div>
