--- a/index.html
+++ b/index.html
@@ -625,8 +625,8 @@
                      </a>
                   </div> -->
                </div>
-               <div id="socials" class="d-flex flex-wrap justify-content-center mt-5">
-               </div>
+               <!-- <div id="socials" class="d-flex flex-wrap justify-content-center mt-5">
+               </div> -->
             </main>
          </div>
       </div>
