--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 <head>
    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-   <title>Cấn Hoàng Anh Quân</title>
+   <title>kwannnzz</title>
    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
    <style type="text/css">
       svg:not(:root).svg-inline--fa {
@@ -514,9 +514,9 @@
          <div class="col-md-8 link-content ">
             <header class="d-flex flex-column align-items-center" style="color: #000000">
                <img id="image" src="./index_files/img.jpeg" alt="Hình đại diện" class="link-image">
-               <div class="d-flex flex-row align-items-center mt-4">
+               <!-- <div class="d-flex flex-row align-items-center mt-4">
                   <h1 id="title"><b>CẤN HOÀNG ANH QUÂN</b></h1>
-               </div>
+               </div> -->
                <p id="description"><img src="./index_files/sig.png" width="40%"></p>
             </header>
             <main id="links" class="mt-4">
